# gremlin

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PITCH.md  QUICKSTART.md  README.md  ROADMAP.md  check_credits.py  demo_api.py  monitor_eval.py  pyproject.toml  review-findings.md  review-prompt.md
.github/scripts/: gremlin_analyze.py
.github/workflows/: ci.yml  deploy-dashboard.yml  gremlin-review.yml
dashboard/: index.html
dashboard/data/: catalog.json  openclaw-results.json
docs/: CUSTOM_PATTERNS.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  MVP_SPEC.md  PATTERNS_RESEARCH.md  PATTERN_MAINTENANCE.md  architecture.drawio  quickstart.md
evals/: BENCHMARK_REPORT.md  PHASE1_REPORT.md  PHASE1_REVISED_STRATEGY.md  PHASE2_PATTERN_ANALYSIS.md  PHASE2_TIER1_FINAL_RESULTS.md  PHASE2_TIER1_FULL_EVAL_RESULTS.md  PHASE2_TIER1_INVESTIGATION_COMPLETE.md  PHASE2_TIER1_RESULTS.md  README.md  RESULTS.md  TESTPYPI_VALIDATION.md  collect_projects.py  generate_cases.py  generate_report.py  golden_eval.py  metrics.py  pattern_refinement.md  phase1_pattern_analysis.md  phase1_results_summary.md  run_eval.py
evals/cases/: auth-prd.yaml  file-upload.yaml  negative-simple-crud.yaml  negative-static-config.yaml  payments-checkout.yaml  test-agent-database.yaml  test-combined-auth.yaml
evals/collectors/: __init__.py  filters.py  github.py
evals/critiques/: celery-critique.md  celery-results.json  httpx-critique.md  httpx-issue-validation.md  httpx-results.json  pydantic-critique.md  pydantic-results.json
evals/eval-2026-01-10/: ANALYSIS_SUMMARY.md  EVAL_COMPLETION_SUMMARY.md  MARKETING_SUMMARY.md  README.md
evals/fixtures/: api-appsmithorg-appsmith-API_All_Verb_spec-03.meta.json  api-appsmithorg-appsmith-API_Bugs_Spec-04.meta.json  api-appsmithorg-appsmith-API_Pane_spec-02.meta.json  api-appsmithorg-appsmith-API_with_List_Widget_spec-01.meta.json  api-hasura-graphql-engine-api_limits-05.meta.json  api-hasura-graphql-engine-api_limits_test-06.meta.json  api-hasura-graphql-engine-apiserver-07.meta.json  api-microsoft-playwright-api_parser-00.meta.json  auth-nhost-nhost-auth-00.meta.json  auth-nhost-nhost-auth_test-01.meta.json  auth-sahat-satellizer-AuthFilter-03.meta.json  auth-sahat-satellizer-AuthResource-05.meta.json  auth-sahat-satellizer-AuthUtils-04.meta.json  auth-sahat-satellizer-auth-02.meta.json  auth-unkeyed-unkey-auth-06.meta.json  auth-unkeyed-unkey-auth_test-07.meta.json  database-appsmithorg-appsmith-Migration_Spec-00.meta.json  database-hasura-graphql-engine-Migrations-04.meta.json  database-hasura-graphql-engine-migration-01.meta.json  database-hasura-graphql-engine-migration-02.meta.json  database-hasura-graphql-engine-migration-03.meta.json  database-labring-sealos-database_backup_monitor-07.meta.json  database-labring-sealos-dbquery-06.meta.json  database-pubkey-rxdb-database-05.meta.json  dependencies-flatpickr-flatpickr-package-02.meta.json  dependencies-kamranahmedse-driver.js-package-00.meta.json  dependencies-renovatebot-renovate-package-lock-01.meta.json  deployment-labring-FastGPT-deployment-01.meta.json  deployment-lobehub-lobe-chat-docker-pr-comment-00.meta.json  deployment-simstudioai-sim-deployment-app-02.meta.json  file-upload-Molunerfinn-PicGo-upload-dist-00.meta.json  file-upload-safrazik-vue-file-agent-upload-server-03.meta.json  file-upload-valor-software-ng2-file-upload-file-catcher-01.meta.json  file-upload-valor-software-ng2-file-upload-file-catcher-02.meta.json  (+13 more)
examples/: README.md  basic-usage.md  ci-integration.md  output-formats.md  with-context.md
gremlin/: __init__.py  api.py  cli.py
patterns/: breaking.yaml  code-review.yaml
scans/: openclaw-risk-analysis.md
tests/: __init__.py  test_api.py  test_cli_stages.py  test_cli_validate.py  test_dashboard_data.py  test_golden.py  test_inference.py  test_patterns.py  test_stages.py  test_validator.py
(+72 files in other folders)
